--- a/config
+++ b/config
@@ -117,8 +117,27 @@ colors:
     background: '0x282a36'
     foreground: '0xf8f8f2'
   cursor:
-    text: '0x44475a'
-    cursor: '0xf8f8f2'
+    text: CellBackground
+    cursor: CellForeground
+  vi_mode_cursor:
+    text: CellBackground
+    cursor: CellForeground
+  search:
+    matches:
+      foreground: '0x44475a'
+      background: '0x50fa7b'
+    focused_match:
+      foreground: '0x44475a'
+      background: '0xffb86c'
+    bar:
+      background: '0x282a36'
+      foreground: '0xf8f8f2'
+  line_indicator:
+    foreground: None
+    background: None
+  selection:
+    text: CellForeground
+    background: '0x44475a'
   normal:
     black:   '0x000000'
     red:     '0xff5555'
@@ -146,7 +165,6 @@ colors:
     magenta: '0xff46b0'
     cyan:    '0x59dffc'
     white:   '0xe6e6d1'
-  indexed_colors: []
 
 # Nord Theme
 # colors:
